Added MDRadialProgress to projects page, fixed a few minor issues.

--- a/_posts/2012-10-04-javafx-only-half-of-the-solution.html
+++ b/_posts/2012-10-04-javafx-only-half-of-the-solution.html
@@ -1,6 +1,6 @@
 --- 
 layout: post
-title: Cross-platform desktop Java applications, JavaFX is not enough.
+title: Cross-platform desktop Java applications, JavaFX is not enough
 tags: 
   ["Java", "OSX", "OpenJDK", "JavaFX"]
 blurb: |
