--- a/_posts/2013-02-06-watchlist-alert-in-the-app-store.html
+++ b/_posts/2013-02-06-watchlist-alert-in-the-app-store.html
@@ -12,7 +12,7 @@ blurb: |
 <p>It started as an app to "scratch an itch" as at one point I was using eBay a lot and I was constantly forgetting about the bids I was watching. With a little bit more effort I polished and published it in the <a href="https://itunes.apple.com/app/watchlist-alert/id595336765?mt=12">Mac App Store</a>.</p>
 <p>I'm planning to distribute it outside the Apple store too, mostly to see how complicated the whole process it.</p>
 
-<p>If you happen to be using it and have any comments or suggestions, please <a href="http://infinityrealm.com/apps/wa/support" title="Support"/>leave them on the support website</a> or just fire me an e-mail from the <a href="http://intransitione.com/support.html"/>contact page.</p>
+<p>If you happen to be using it and have any comments or suggestions, please <a href="http://infinityrealm.com/apps/wa/support" title="Support"/>leave them on the support website</a> or just fire me an e-mail from the <a href="http://intransitione.com/support.html"/>contact page</a>.</p>
 
 <br/><br/>
 <p>Marco</p>
