--- a/_posts/2013-04-10-software-doesnt-last.html
+++ b/_posts/2013-04-10-software-doesnt-last.html
@@ -1,6 +1,6 @@
 --- 
 layout: post
-title: Software doesn't last.
+title: Software does not last
 tags: 
   ["UIKit", "iOS", "Objective-c"]
 blurb: |
@@ -39,4 +39,4 @@ blurb: |
 <p><a href="http://en.wikipedia.org/wiki/Biocomputers">Biocomputers</a> are <a href="http://io9.com/this-new-discovery-will-finally-allow-us-to-build-biolo-462867996">getting closer</a>, I wonder if it will be possible one day to have a software that will adapt automatically to the changes in its environment without requiring any human intervention. I guess at that point humans won't be needed anymore...</p>
 
 
-Marco
+<p>Marco</p>
