--- a/projects.html
+++ b/projects.html
@@ -5,12 +5,21 @@ title: Blog
 <div id="home"> 
 <script src="/js/mdpopup.js"></script>
 <h3>
+	<img class="project-icon" src="/img/icons/mdradialprogressicon.png"/>
+	<a title="MDRadialProgress" href="">MDRadialProgress</a>
+</h3>
+<p>
+A custom UIView useful to represent progress in discrete steps. 
+See related <a href="http://intransitione.com/blog/mdradialprogress-release">blog post</a> for more info. <br/>
+Source code available on <a href="https://github.com/mdinacci/MDRadialProgress">GitHub</a>.
+</p>
+<h3>
 	<img class="project-icon" src="/img/icons/wa.png"/>
 	<a title="Watchlist Alert" href="">Watchlist Alert</a>
 </h3>
 <p>
-	A Mac OSX application to monitor your eBay watchlist for expiring items and be sure not to lose any bid again.</br>
-	Now available for sale on the <a href="https://itunes.apple.com/app/watchlist-alert/id595336765?mt=12">Mac App Store</a>.
+	A Mac OSX utility to monitor your eBay watchlist for expiring items and be sure not to lose any bid again.
+	Available for sale on the <a href="https://itunes.apple.com/app/watchlist-alert/id595336765?mt=12">Mac App Store</a>.
 </p>
 <h3>
 	<img class="project-icon" src="/img/icons/golang.png"/>
@@ -22,6 +31,7 @@ title: Blog
 	<img class="project-icon" src="/img/icons/java.png"/>
 	<a title="OpenJDK " href="/blog/take-java-to-app-store/">OpenJDK 7 fork</a>
 </h3>
+<p class="warning"><strong>Deprecated !</strong> I no longer recommend this fork since it is no longer updated and all open issues have been resolved in the last year. Thanks to the Mac OSX team @ Oracle.</p>
 <p>I maintain a <a href="https://bitbucket.org/infinitekind/openjdk7u-jdk" title="Link to OpenJDK7u repo">fork of OpenJDK 7</a> that fixes some bugs on OSX and that allow 
 	<a href="http://infinitekind.com/" title="Link to The Infinite Kind LLC">us</a> to publish our Java application in the App Store.</p>
 	<p>See <a href="/blog/take-java-to-app-store/" title="Link to article">this article</a> and <a href="/blog/forking-jdk-for-fun-and-profit/">this one too</a> for more details.
