--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@ title: About
     I'm not actively looking for a job but I'm always interested to know about new opportunities.</p>
 
     <p>
-        <a href="//plus.google.com/112981284665807000344?prsrc=3" rel="me" style="text-decoration:none;">
-        <img src="//ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/></a>&nbsp;&nbsp;
+        <a href="https://plus.google.com/112981284665807000344/posts" rel="me" style="text-decoration:none;">
+        <img src="http://ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/></a>&nbsp;&nbsp;
         <a href="https://twitter.com/marcodinacci" class="twitter-follow-button" data-show-count="false" data-size="small" data-show-screen-name="false" data-dnt="true">Follow @marcodinacci</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     </p>
