--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,7 @@ Source code available on <a href="https://github.com/mdinacci/MDRadialProgress">
 	<img class="project-icon" src="/img/icons/java.png"/>
 	<a title="OpenJDK " href="/blog/take-java-to-app-store/">AppBundler fork</a>
 </h3>
+<p class="warning"><strong>I am no longer the maintainer !</strong> I no longer maintain this project but the great folks at The Infinite Kind still do !.</p>
 <p>I maintain a <a href="https://bitbucket.org/infinitekind/appbundler" title="Link to AppBundler repo">fork of Oracle AppBundler</a> that adds some functionalities not available in the original code to ease the deployment of Java applications on OSX.</p>
 	<p>See <a href="/blog/take-java-to-app-store/" title="Link to article">this article</a> and <a href="/blog/forking-jdk-for-fun-and-profit/">this one too</a> for more details.
 </p>
