--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@ title: About
     		<li><strong>Cambridge, UK</strong></li>
     	</ul>
     <p>This website is a mostly a technical blog focusing on whatever I'm currently learning/working with at the moment.</p>
+    <p>If you arrived here looking for my old travel blog, it can now be found <a href="http://elcocinerocibernetico.com">over here</a>.</p>
 
     <p>This blog is written in HTML5, <a href="http://lesscss.org/" title="Less homepage">Less</a>, a sprinkle of <a href="http://twitter.github.com/bootstrap/" title=""Twitter Bootstrap>Bootstrap</a>, a few drops of <a href="http://jquery.com">jQuery</a> and compiled to static pages using <a href="http://jekyllrb.com/" title="Jekyll homepage">Jekyll</a>. If that makes sense to you, why don't you <a href="https://github.com/mdinacci/intransitione.com">checkout the source code ?</a></p>
     <p>I'm still migrating content from a previous blog so some of the content, including the blog comments, is still missing.</p>
