Added disclaimer message to take java to app store blog post

--- a/_posts/2012-06-30-take-java-to-app-store.html
+++ b/_posts/2012-06-30-take-java-to-app-store.html
@@ -11,7 +11,8 @@ blurb: |
       <div align="center"><img src="/img/java_app_store.png" border="0"/></div>
 ---
 
-<p class="headsup"><strong>Last Update: 29 October 2012 - Updated recommended OpenJDK discussion.</strong>
+<p class="danger"><strong>The AppBundler fork is still maintained but no longer by me. Forward your queries to the capable folks at the <a href="https://bitbucket.org/infinitekind/appbundler">Infinite Kind</a>. 
+Please also note that this article has been last updated on the 29th October 2012 and I'm no longer actively maintaning it. Thanks.</strong></p>
 
 <p class="success"><a href="https://itunes.apple.com/app/id538911179"><strong>Moneydance</strong></a> is on sale in the App Store!</p>
 
@@ -110,7 +111,7 @@ and be sure to take a look at the <a href="#knownproblems">known problems</a>.
         <option value="-Dapple.laf.useScreenMenuBar=true"/>
         <option value="-Dcom.apple.macos.use-file-dialog-packages=true"/>
         <option value="-Dcom.apple.macos.useScreenMenuBar=true"/>
-        <option value="-Dcom.apple.mrj.application.apple.menu.about.name=MyApp"/>
+        <option value="-Dapple.awt.application.name=MyApp"/>
         <option value="-Dcom.apple.smallTabs=true"/>
 
         <option value="-Xmx1024M"/>
