Improved projects page

--- a/projects.html
+++ b/projects.html
@@ -4,81 +4,61 @@ title: Blog
 ---
 <div id="home"> 
 <script src="/js/mdpopup.js"></script>
+
+<h2 style="margin-top:10px;margin-bottom:30px">Mobile</h2>
 <h3>
 	<img class="project-icon" src="/img/icons/mdradialprogressicon.png"/>
-	<a title="MDRadialProgress" href="">MDRadialProgress</a>
+	<a title="MDRadialProgress" href="https://github.com/mdinacci/MDRadialProgress">MDRadialProgress</a>
 </h3>
 <p>
+<img class="leftimagenoborder" src="/img/screenshots/mdradialprogress.png"></img>
 A custom UIView useful to represent progress in discrete steps. 
-See related <a href="http://intransitione.com/blog/mdradialprogress-release">blog post</a> for more info. <br/>
+See related <a href="http://intransitione.com/blog/mdradialprogress-examples">blog post</a> for more info. <br/>
 Source code available on <a href="https://github.com/mdinacci/MDRadialProgress">GitHub</a>.
+It has the following features:
+<ul>
+	<li>Draw progress in separated slices or as a single arc.</li>
+	<li>Can customize all colors, the distance of the slices and their thickness.</li>
+	<li>Clockwise and anti-clockwise drawing order.</li>
+	<li>Can start progress from any slice, not necessarily from the top.</li>
+	<li>Display a label with the current progress. The label size automatically adapts to the space available.</li>
+	<li>Themes support for easier customization of multiple views.</li>
+	<li>Fully accessible</li>
+	<li>Support iOS 6.0+</li>
+	<li>Original BSD and Commercial Non-Attribution licenses available (you can use it in commercial software).</li>
+</ul>
+<div style="margin-bottom:100px"></div>
 </p>
-<h3>
-	<img class="project-icon" src="/img/icons/wa.png"/>
-	<a title="Watchlist Alert" href="">Watchlist Alert</a>
-</h3>
-<p>
-	A Mac OSX utility to monitor your eBay watchlist for expiring items and be sure not to lose any bid again.
-	Available for sale on the <a href="https://itunes.apple.com/app/watchlist-alert/id595336765?mt=12">Mac App Store</a>.
-</p>
-<h3>
-	<img class="project-icon" src="/img/icons/golang.png"/>
-	<a title="goamzpa" href="https://github.com/mdinacci/goamzpa">goamzpa</a>
-</h3>
-<p>A <a href="https://github.com/mdinacci/goamzpa" title="Link to goamzpa repository">Go library</a> to use the Amazon Product Advertising API from Go.
-</p>
-<h3>
-	<img class="project-icon" src="/img/icons/java.png"/>
-	<a title="OpenJDK " href="/blog/take-java-to-app-store/">OpenJDK 7 fork</a>
-</h3>
-<p class="warning"><strong>Deprecated !</strong> I no longer recommend this fork since it is no longer updated and all open issues have been resolved in the last year. Thanks to the Mac OSX team @ Oracle.</p>
-<p>I maintain a <a href="https://bitbucket.org/infinitekind/openjdk7u-jdk" title="Link to OpenJDK7u repo">fork of OpenJDK 7</a> that fixes some bugs on OSX and that allow 
-	<a href="http://infinitekind.com/" title="Link to The Infinite Kind LLC">us</a> to publish our Java application in the App Store.</p>
-	<p>See <a href="/blog/take-java-to-app-store/" title="Link to article">this article</a> and <a href="/blog/forking-jdk-for-fun-and-profit/">this one too</a> for more details.
-</p>
-<h3>
-	<img class="project-icon" src="/img/icons/java.png"/>
-	<a title="OpenJDK " href="/blog/take-java-to-app-store/">AppBundler fork</a>
-</h3>
-<p class="warning"><strong>I am no longer the maintainer !</strong> I no longer maintain this project but the great folks at The Infinite Kind still do !.</p>
-<p>I maintain a <a href="https://bitbucket.org/infinitekind/appbundler" title="Link to AppBundler repo">fork of Oracle AppBundler</a> that adds some functionalities not available in the original code to ease the deployment of Java applications on OSX.</p>
-	<p>See <a href="/blog/take-java-to-app-store/" title="Link to article">this article</a> and <a href="/blog/forking-jdk-for-fun-and-profit/">this one too</a> for more details.
-</p>
-
 <h3>
 	<img class="project-icon" src="/img/icons/group_bill.png"/>
 	<a title="Group Bill " href="/blog/group-bill-hit-the-app-store/">Group Bill</a>
-	<button data="/img/group_bill.png" datawidth="500" dataheight="248" class="popup-trigger"/>
 </h3>
-<p>An iPhone application to split a restaurant bill fairly according to how much
+<p>
+<img class="align-left thumbnail" src="/img/screenshots/groupbill.png"></img>
+An iPhone application to split a restaurant bill fairly according to how much
 people have eaten/drink. <a href="http://itunes.apple.com/us/app/group-bill/id504949463?ls=1&mt=8" title="Group Bill on iTunes Store">Available on the iTunes App Store</a>.</p>
-
+<div style="margin-bottom:300px"></div>
 <h3>
 	<img class="project-icon" src="/img/icons/generic_ios_icon.png"/>
-	<a title="iPhone app" href="#">iPhone application</a>
-	<button data="/img/twim.png" datawidth="256" dataheight="192" class="popup-trigger"/>
+	<a title="iPhone app" href="#">TWIM</a>
 </h3>
-<p>An emergency and disaster management iPhone application I've written for a client that allows the user to build a report based on 
+<p>
+<img class="align-left thumbnail" src="/img/screenshots/twim.png"></img>
+An emergency and disaster management iPhone application I've written for a client that allows the user to build a report based on 
 pictures, videos, text messages and audio recordings, save it on his device and send it to a remote server
 where it will be analyzed and dispatched to the competent authorithies.
 </p>
-<p>Not (yet) available on the iTunes store.</p>
-
+<div style="margin-bottom:150px"></div>
 <h3>
 	<img class="project-icon" src="/img/icons/moviesugg.png"/>
 	<a title="Movie Suggestions" href="https://market.android.com/details?id=com.marcodinacci.android.movierec">Movie Suggestions</a>
-	<button data="/img/ms.png" datawidth="500" dataheight="445" class="popup-trigger"/>
 </h3>
-<p>An Android application that suggests a list of movies to watch given a movie
+<p>
+<img class="align-left thumbnail" src="/img/screenshots/ms.png"></img>
+An Android application that suggests a list of movies to watch given a movie
 title. It uses the Rottentomatoes API to retrieve movies informations. Uses my
 <b>rottentomatoes-for-android</b> open source library.</p>
-
-<h3>
-	<img class="project-icon" src="/img/icons/m-file.png"/>
-	<a title="MDTouch" href="https://github.com/mdinacci/MDTouch">MDTouch</a>
-</h3>
-<p>A collection of Objective-C categories and utility classes I use in my projects.</p>
-
+<div style="margin-bottom:190px"></div>
 <h3>
 	<img class="project-icon" src="/img/icons/picmotion.png"/>
 	<a title="Pic In Motion" href="https://github.com/mdinacci/PicInMotion/tree/standalone">PicInMotion</a>
@@ -94,6 +74,51 @@ to explain how the motion detection works.</p>
 </h3>
 <p>An Open Source Java library that implements the <a href="http://developer.rottentomatoes.com/">Rotten Tomatoes API</a>.</p>
 
+<h2 style="margin-top:40px;margin-bottom:30px">Desktop</h2>
+<h3>
+	<img class="project-icon" src="/img/icons/wa.png"/>
+	<a title="Watchlist Alert" href="">Watchlist Alert</a>
+</h3>
+<p>
+	<img class="align-left thumbnail" src="/img/screenshots/watchlistalert.png"></img>
+	A Mac OSX utility to monitor your eBay watchlist for expiring items and be sure not to lose any bid again.
+	Retired from the App Store since I don't have time to maintain it anymore.
+</p><br>
+<div style="margin-bottom:130px"></div>
+<h3>
+	<img class="project-icon" src="/img/icons/python.jpg"/>
+	<a title="rtw" href="https://github.com/mdinacci/rtw">rtw</a>
+</h3>
+<p><img class="align-left thumbnail" src="/img/screenshots/rtw.jpg"></img>An interrupted attempt at writing an improved <em>Trailblazer</em> (an old Commodore era videogame). About 10k lines of Python code shared among the game and the track editors.</p>
+<div style="margin-bottom:230px"></div>
+</div>
+
+<h2 style="margin-top:40px;margin-bottom:30px">Other</h2>
+<h3>
+	<img class="project-icon" src="/img/icons/golang.png"/>
+	<a title="goamzpa" href="https://github.com/mdinacci/goamzpa">goamzpa</a>
+</h3>
+<p>A <a href="https://github.com/mdinacci/goamzpa" title="Link to goamzpa repository">Go library</a> to use the Amazon Product Advertising API from Go.
+</p>
+
+<h3>
+	<img class="project-icon" src="/img/icons/java.png"/>
+	<a title="OpenJDK " href="/blog/take-java-to-app-store/">OpenJDK 7 fork</a>
+</h3>
+<p class="warning"><strong>Deprecated !</strong> I no longer recommend this fork since it is no longer updated and all open issues have been resolved in the last year. Thanks to the Mac OSX team @ Oracle.</p>
+<p>I maintain a <a href="https://bitbucket.org/infinitekind/openjdk7u-jdk" title="Link to OpenJDK7u repo">fork of OpenJDK 7</a> that fixes some bugs on OSX and that allow 
+	<a href="http://moneydance.com/" title="Link to Moneydance website">Moneydance</a> to be published in the App Store.</p>
+	<p>See <a href="/blog/take-java-to-app-store/" title="Link to article">this article</a> and <a href="/blog/forking-jdk-for-fun-and-profit/">this one too</a> for more details.
+</p>
+<h3>
+	<img class="project-icon" src="/img/icons/java.png"/>
+	<a title="OpenJDK " href="/blog/take-java-to-app-store/">AppBundler fork</a>
+</h3>
+<p class="warning"><strong>I am no longer the maintainer !</strong> I no longer maintain this project but the great folks at The Infinite Kind still do !.</p>
+<p>I maintain a <a href="https://bitbucket.org/infinitekind/appbundler" title="Link to AppBundler repo">fork of Oracle AppBundler</a> that adds some functionalities not available in the original code to ease the deployment of Java applications on OSX.</p>
+	<p>See <a href="/blog/take-java-to-app-store/" title="Link to article">this article</a> and <a href="/blog/forking-jdk-for-fun-and-profit/">this one too</a> for more details.
+</p>
+
 <h3>
 	<img class="project-icon" src="/img/icons/ruby_logo.png"/>
 	<a title="careers-crawler" href="https://github.com/mdinacci/careers-crawler">careers-crawler</a>
@@ -104,4 +129,3 @@ of visualizations to highlight the most used technologies required by the compan
 looking for developers. I used the graphics in an article about the <a href="http://www.intransitione.com/blog/look-it-job-market/">job market</a>. 
 </p>
 
-</div>
